# AiMoviment

./: .gitignore  Dockerfile  app.py  docker-compose.yaml  pyproject.toml
aimoviment/: __init__.py  goniometry.py  image_processor.py  routes.py  settings.py  skeleton.py
aimoviment/static/: camera.js  style.css
aimoviment/templates/: base.html  index.html
tests/: conftest.py  test_images.py
