[tool.poetry]
name = "aimoviment"
version = "0.1.0"
description = ""
authors = ["daltroizaias <daltroizaias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.11.0.86"
mediapipe = "^0.10.21"
flask = "^3.1.1"
gunicorn = "^23.0.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
moviepy = "1.0.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.12.1"
taskipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'


[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
docs = "mkdocs serve"
pre_test = 'task lint'
test = "pytest  -x -s --cov=web_consultorio tests -vv"
post_test = "coverage html"
migrate = "set FLASK_APP=run.py && flask db upgrade && flask db migrate"
run = "flask run"